tenant2/allow-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db
  namespace: tenant2
spec:
  podSelector:
    matchLabels:
      tier: mysql
  ingress:
    - from:
      - podSelector:
          matchLabels:
            tier: frontend
      ports:
        - protocol: TCP
          port: 3306

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-extract1
  namespace: tenant2
spec:
  podSelector:
    matchLabels:
      tier: mysql
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          identifier: tenant2-extract

      podSelector:
        matchLabels:
          app: flaskapi
