tenant2/network-deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-policy
  namespace: tenant2
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress: []
